buildscript {
    ext.kotlin_version = '1.1.2-2'
    ext.spring_boot_version = '1.5.3.RELEASE'

    repositories {
        jcenter()
        mavenCentral()
        maven { url 'https://repo.spring.io/plugins-release' }
    }
    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
        classpath "org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version"
        classpath 'io.spring.gradle:propdeps-plugin:0.0.8'
    }
}

apply plugin: 'idea'
apply plugin: 'kotlin'
apply plugin: "kotlin-spring"
apply plugin: 'org.springframework.boot'

configure(allprojects) {
    apply plugin: 'propdeps'
    apply plugin: 'propdeps-maven'
    apply plugin: 'propdeps-idea'
    apply plugin: 'propdeps-eclipse'
}

compileJava.dependsOn(processResources)

sourceSets {
    main.kotlin.srcDirs += 'src/main/kotlin'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    jcenter()
    mavenCentral()
}

dependencies {
    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"

    compile 'com.linecorp.bot:line-bot-spring-boot:1.7.0'
    compile 'com.squareup.retrofit2:retrofit:2.2.0'
    compile 'com.fasterxml.jackson.core:jackson-core:2.8.8'
    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.8'

    compile 'org.springframework.boot:spring-boot-starter-web'
    kapt 'org.springframework.boot:spring-boot-configuration-processor'
    optional 'org.springframework.boot:spring-boot-configuration-processor'
    runtime 'org.springframework.boot:spring-boot-devtools'
}

bootRun {
    // bootRunが速くなる
    jvmArgs '-XX:TieredStopAtLevel=1', '-Xverify:none'
}
